# flattening

./: .gitignore  README.md  pyproject.toml  setup.py
src/flattening/: __init__.py  algorithm.py  interpolate.c
src/flattening/c_library/: interpolate.c
