[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "flattening"
version = "0.1"
dependencies = ["numpy"]
requires-python = ">=3.8"
authors = [{ name = "Luca Marchetti", email = "luca.marchetti@tum.de" }]
maintainers = []
description = "Project an image taken on a curved detector onto a virtual flat detector."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
